# buttonpad

./: .gitignore  README.md  blog.md  launcher.py  pyproject.toml
buttonpad/: __init__.py  calculator.py  demokeyboardmove.py  dodgerrace.py  eightqueens.py  emojicopypad.py  launcher.py  magic8ball.py  pad.py  pegsolitaire.py
docs/: api.rst  changelog.rst  conf.py  index.rst  installation.rst  requirements.txt  usage.rst
examples/: calculator.py  connectfour.py  conwaysgameoflife.py  demoenterexit.py  demokeyboardmove.py  dodger.py  dodgerrace.py  emojicopypad.py  fishtank.py  floodit.py  gomoku.py  keyboardmove.py  lightsout.py  magic8ball.py  memorypuzzle.py  othello.py  othellovscpu.py  pegsolitaire.py  phonekeypad.py  phonekeypad2.py  pixeleditor.py  samegame.py  simon.py  slidepuzzle.py  stopwatch.py  tictactoe.py  tictactoevscpu.py  twentyfortyeight.py
