[project]
name = "ButtonPad"
version = "0.1.0"
description = "A simple Tkinter-based button pad GUI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["setuptools>=61.0.0", "pymsgbox"]
build-backend = "setuptools.build_meta"
