[project]
name = "ButtonPad"
version = "0.2.0"
description = "A simple Tkinter-based GUI framework for making a grid of buttons, text boxes, and labels."
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["setuptools>=61.0.0", "pymsgbox"]
build-backend = "setuptools.build_meta"
